--- a/personals.html
+++ b/personals.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-md navbar-dark">
               <div class="container-fluid" style="padding-left: 0">
-                <a style="color: black;" class="navbar-brand logo" href="personal site.html">Ansh Gupta</a>
+                <a style="color: black;" class="navbar-brand logo" href="index.html">Ansh Gupta</a>
               </div>
               <button
                 class="navbar-toggler"
